# benchmark-ae

./: .Rhistory  .gitignore  benchmark.ipynb  pyproject.toml
benchmark_ae/: fetch_data.py
data/cantilever/: description.md
data/cardiac/: description.md
data/cardiac/cardiac11/processed/: outputs.csv  parameters.csv
data/cardiac/cardiac12/processed/: parameters.csv
data/cardiac/cardiac12/raw/: outputs.csv
data/cardiac/cardiac2/raw/: parameters.csv
data/cardiac/cardiac3/processed/: outputs.csv  parameters.csv
data/cardiac/cardiac4/processed/: outputs.csv
data/cardiac/cardiac9/raw/: outputs.csv  parameters.csv
data/cardiac/circ_adapt/raw/: CircAdapt.tar.xz
data/cardiac/original/: atrial_cell_model.tar.xz  fourchamber.tar.xz  tissue_electrophysiology.tar.xz  ventricular_cell_model.tar.xz
data/climate/: description.md  processing.R
data/climate/TestDataSets/: SphericalGP_Demo.ipynb  Test_data_details.html  Test_data_details.qmd
data/climate/paleo/processed/: outputs.csv  parameters.csv
data/climate/uvic/processed/: outputs.csv  parameters.csv
data/climate/uvic/raw/: UVic.rda
data/fem/: description.md
data/shuang/: 2964_1671247_1000samples_LATQRSd_all.csv  2964_1671247_500samples_LATQRSd_all.csv  2964_3061856_1000samples_LATQRSd_all.csv  2964_3061856_500samples_LATQRSd_all.csv  2964_3070993_500samples_LATQRSd_all.csv  info.txt
notebooks/: benchmark.ipynb  difficult_problems.ipynb  plot_benchmarks.R  results_cardiac_no_gridsearch.csv  results_cardiac_nosearch_cardiac15678.csv  results_cardiac_random_10_cardiac15678.csv
(+2 files in other folders)
