[tool.poetry]
name = "benchmark-ae"
version = "0.1.0"
description = "Evaluate autoemulate on different datasets"
authors = ["mastoffel <martin.adam.stoffel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "benchmark_ae"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
