[tool.poetry]
name = "benchmark-ae"
version = "0.1.0"
description = "Evaluate autoemulate on different datasets"
authors = ["mastoffel <martin.adam.stoffel@gmail.com>"]
license = "MIT"
packages = [{include = "benchmark_ae"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "<2.1"
autoemulate = {git = "https://github.com/alan-turing-institute/autoemulate.git"}
numpy = "<1.24"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
